Darker grey plus 3px outline, issues are with clipping needs css fixing

--- a/public/global.css
+++ b/public/global.css
@@ -128,7 +128,8 @@ button.mapboxgl-popup-close-button {
 
 input:focus,
 button:focus {
-  outline: #666 2px solid !important;
+  outline: #5E666E 3px solid !important;
+
 }
 
 .map-popup .mapboxgl-popup-content {
